--- a/index4.html
+++ b/index4.html
@@ -145,7 +145,7 @@
         </section>
         <section>
             <h2>Content's propreties</h2>
-            <div>DIV</div>
+            <div>DIV DIV</div>
         </section>
     </article>
     <footer>
